# vidwit

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: release.yml
config/: vidwit.toml.sample  vidwit_prompt.md.sample
vidwit/: assembler.py  chunker.py  cli.py  config.py  ffmpeg_io.py  init_cmd.py  llm.py  pipeline.py  scratch.py  transcribe.py
vidwit/templates/: vidwit_prompt.md
